# parallel-tempering

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp  makefile  output.csv  plot.py  run  run1.csv  run2.csv  runs.bat  test  test.cpp
data/: geometric.csv  optimized.csv  output.csv  run1.csv  run2.csv  run3.csv.csv
include/: PT.h  PT.hh  RNG.h  RNG.hh  Replica.h  Replica.hh  util.h
include/pcg/: .gitignore
src/: PT.cc  PT.cpp  RNG.cc  RNG.cpp  Replica.cc  Replica.cpp  util.cc  util.cpp
